--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   http: ^0.12.2
   provider: ^4.3.2+2
+  rxdart: ^0.24.1
   shared_preferences: ^0.5.12+4
 
 dev_dependencies:
