Add chart into country_card.dart

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   provider: ^4.3.2+2
   rxdart: ^0.24.1
   shared_preferences: ^0.5.12+4
+  fl_chart: ^0.12.0
 
 dev_dependencies:
   flutter_test:
